@@ -1,3 +1,9 @@
+2016-09-30  Richard Biener  <rguenther@suse.de>
+
+	PR tree-optimization/77399
+	* tree-ssa-forwprop.c (simplify_vector_constructor): Handle
+	float <-> int conversions.
+
 2016-09-30  Alan Modra  <amodra@gmail.com>
 
 	* config/rs6000/rs6000.c (rs6000_opt_vars): Revert last change.
